--- a/Main/package.json
+++ b/Main/package.json
@@ -10,6 +10,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
+    "react-helmet-async": "^2.0.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "web-vitals": "^2.1.4"
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-snap": "^1.23.0"
   }
 }
